# KernelPractice

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
src/cpu/gemm/: CMakeLists.txt  gemm.h  gemm_4x4block_v10.cpp  gemm_4x4block_v11.cpp  gemm_4x4block_v3.cpp  gemm_4x4block_v4.cpp  gemm_4x4block_v5.cpp  gemm_4x4block_v6.cpp  gemm_4x4block_v7.cpp  gemm_4x4block_v8.cpp  gemm_4x4block_v9.cpp  gemm_4x8block_v12.cpp  gemm_4x8block_v13.cpp  gemm_4x8block_v14.cpp  gemm_4x8block_v15.cpp  gemm_4x8block_v16.cpp  gemm_4x8block_v17.cpp  gemm_4x8block_v18.cpp  gemm_4x8block_v19.cpp  gemm_4x8block_v20.cpp  gemm_benchmark.cpp  gemm_blas.cpp  gemm_omp_v18.cpp  gemm_omp_v19.cpp  gemm_test.cpp  gemm_v0.cpp  gemm_v1.cpp  gemm_v2.cpp  gemm_v3.cpp  gemm_v4.cpp  gemm_v5.cpp  gemm_v6.cpp  gemm_v7.cpp  gemm_v8.cpp  util.h
src/cuda/: CMakeLists.txt
src/cuda/benchmark/: benchmark.cuh
src/cuda/gemm/: CMakeLists.txt  matmul.cu  matmul.cuh  matmul_native.cu  test.cpp  test_util.h
src/cuda/gemv/: CMakeLists.txt  benchmark.cpp  gemv.h  gemv_cublas.cu  gemv_cutlass.cu  gemv_v0.cu  gemv_v1.cu  gemv_v2.cu  gemv_v3.cu  gemv_v4.cu  gemv_v5.cu  gemv_v6.cu  test.cpp
src/cuda/reduce/: CMakeLists.txt  reduce.h  reduce_benchmark.cpp  reduce_test.cpp  reduce_v0.cu  reduce_v1.cu  reduce_v2.cu  reduce_v3.cu  reduce_v4.cu  reduce_v5.cu  util.h
src/cuda/rmsnorm/: CMakeLists.txt  flashinfer_rmsnorm.cu  rmsnorm.h  rmsnorm_benchmark.cpp  rmsnorm_test.cpp  rmsnorm_v0.cu  rmsnorm_v1.cu  rmsnorm_v2.cu  rmsnorm_v3.cu
src/cuda/softmax/: CMakeLists.txt  reduce.cuh  softmax.h  softmax_v0.cu  softmax_v1.cu  test.cpp
src/cuda/utils/: util.h
src/opencl/: CMakeLists.txt
src/opencl/conv2d/: CMakeLists.txt  conv2d.cpp  conv2d.h  test.cpp  valid_conv2d_v0.cl  valid_conv2d_v1.cl  valid_conv2d_v2.cl  valid_conv2d_v3.cl  valid_conv2d_v4.cl
src/opencl/gemm/: CMakeLists.txt  gemm.cpp  gemm.h  gemm_v0.cl  gemm_v1.cl  gemm_v10.cl  gemm_v2.cl  gemm_v3.cl  gemm_v4.cl  gemm_v5.cl  gemm_v6.cl  gemm_v7.cl  gemm_v8.cl  gemm_v9.cl  test.cpp
src/opencl/reduce/: CMakeLists.txt  reduce.cpp  reduce.h  reduce_v0.cl  reduce_v1.cl  reduce_v2.cl  reduce_v3.cl  reduce_v4.cl  test.cpp
src/opencl/softmax/: CMakeLists.txt  softmax.cpp  softmax.h  softmax_v0.cl  test.cpp
src/opencl/utils/: utils.cpp  utils.h
